# ai-hackathon-2025

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  multi_agent_collaboration.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.quickdeploy/: codebuild.yml
.quickdeploy/cloudformation/: pipeline.yml  service.yml
db/: app.py  db.py  db_check.py  requirements.txt  view_entries.py
fastapi-app/app/: analyze_transcript.py  server.py  transcribe.py
lambda-app/: entrypoint.sh  lambda_function.py
notebooks/: entryName.ipynb  intro.ipynb  kepoints.ipynb  multi_agent_collaboration.ipynb  playground.ipynb  playground_speech_to_text.ipynb  summary.ipynb
s3/: s3_utils.py
streamlit-app/.streamlit/: config.toml
streamlit-app/app/: Home.py
streamlit-app/app/pages/: Page2.py  entryList.py  individualEntry.py  sample_entries.json
thisapp/: aws_lambda.py  secrets.py
